--- a/src/app/layout/styles.module.css
+++ b/src/app/layout/styles.module.css
@@ -1,9 +1,10 @@
-
-
 .Logo {
-  height: 32px;
-  background: rgba(255, 255, 255, 0.2);
-  margin: 16px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.Logo img {
+  max-width: 80%;
 }
 
 .Layout {
@@ -17,5 +18,3 @@
   align-items: center;
   justify-content: space-between;
 }
-
-
