update new product form

--- a/src/app/modules/Products/pages/NewProduct/styles.module.css
+++ b/src/app/modules/Products/pages/NewProduct/styles.module.css
@@ -8,3 +8,13 @@
   width: calc(100% - 15px) !important;
   margin: 0;
 }
+
+.UploadLabel {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.UploadIcon {
+  padding-right: 5px;
+}
